syntax = "proto2";

option go_package = "proto/callbackdata;callbackdata";

message CallbackData {
   required int32 field1 = 1;
   required int32 field2 = 2;
   required int32 field3 = 3;
   required int32 field4 = 4;
   required int32 field5 = 5;
   required int32 field6 = 6;
   required int32 field7 = 7;
   required int32 field8 = 8;
   required int32 field9 = 9;
   optional int32 field10 = 10;
   optional int32 field11 = 11;
   optional int32 field12 = 12;
   optional int32 field13 = 13;
   optional int32 field14 = 14;
   optional int32 field15 = 15;
}